tests/ui/coherence/impl[t]-foreign[local]-for-fundamental[t].stderr
error[E0210]: type parameter `T` must be covered by another type when it appears before the first local type (`Local`)
  --> $DIR/impl[t]-foreign[local]-for-fundamental[t].rs:10:6
   |
LL | impl<T> Remote1<Local> for Box<T> {
   |      ^ type parameter `T` must be covered by another type when it appears before the first local type (`Local`)
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local, and no uncovered type parameters appear before that first local type
   = note: in this case, 'before' refers to the following order: `impl<..> ForeignTrait<T1, ..., Tn> for T0`, where `T0` is the first and `Tn` is the last

error[E0210]: type parameter `T` must be covered by another type when it appears before the first local type (`Local`)
  --> $DIR/impl[t]-foreign[local]-for-fundamental[t].rs:14:6
   |
LL | impl<T> Remote1<Local> for &T {
   |      ^ type parameter `T` must be covered by another type when it appears before the first local type (`Local`)
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local, and no uncovered type parameters appear before that first local type
   = note: in this case, 'before' refers to the following order: `impl<..> ForeignTrait<T1, ..., Tn> for T0`, where `T0` is the first and `Tn` is the last

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0210`.
